Added body validation for login/register